--- a/lab2-part1.html
+++ b/lab2-part1.html
@@ -29,7 +29,42 @@
 <script>
     function startThings(){
         let romanNumeral; // do not modify
-        // your code goes here
+        romanNumeral = Number(prompt("Enter a number bewteen 1 and 10"));
+
+        if (romanNumeral == 1) {
+            romanNumeral = 'I';
+
+        } else if (romanNumeral == 2) {
+            romanNumeral ='II';
+
+        } else if (romanNumeral == 3) {
+            romanNumeral ='III';
+
+        } else if (romanNumeral == 4) {
+            romanNumeral ='IV';
+
+        } else if (romanNumeral == 5) {
+            romanNumeral = 'V';
+
+        } else if (romanNumeral == 6) {
+            romanNumeral = 'VI';
+
+        } else if (romanNumeral == 7) {
+            romanNumeral = 'VII';
+
+        } else if (romanNumeral == 8) {
+            romanNumeral = 'VIII';
+
+        } else if (romanNumeral == 9) {
+            romanNumeral = 'IX';
+
+        } else if (romanNumeral == 10) {
+            romanNumeral = 'X';
+
+        } else {
+            romanNumeral = 'Not a number';
+        }
+
         // be sure to assign the roman numeral to the variable romanNumeral
         // it will be used to display it on the web page using the code below
 
