--- a/lab2-part2.html
+++ b/lab2-part2.html
@@ -29,7 +29,52 @@
 <script>
     function startThings(){
         let romanNumeral; // do not modify
-        // your code goes here
+        romanNumeral = Number(prompt("Enter a number bewteen 1 and 10"))
+        switch (romanNumeral) {
+            case 1:
+                romanNumeral = "I";
+                break;
+
+            case 2:
+                romanNumeral = "II";
+                break;
+
+            case 3:
+                romanNumeral = "III";
+                break;
+
+            case 4:
+                romanNumeral = "VI";
+                break;
+                
+            case 5:
+                romanNumeral = "V";
+                break;
+
+            case 6:
+                romanNumeral = "VI";
+                break;
+
+            case 7:
+                romanNumeral = "VII";
+                break;
+
+            case 8:
+                romanNumeral = "VIII";
+                break;
+
+            case 9:
+                romanNumeral = "IX";
+                break;
+
+            case 10:
+                romanNumeral = "X";
+                break;
+        
+            default:
+                romanNumeral = "Not a Number";
+                break;
+        }
         // be sure to assign the roman numeral to the variable romanNumeral
         // it will be used to display it on the web page using the code below
 
